--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_bloc: ^9.1.1
   flutterfire_cli: ^1.3.1
   get_it: ^8.2.0
+  intl: ^0.18.1
   lottie: ^3.3.2
   shared_preferences: ^2.5.3
 
